sets up a simple lang switcher with cookie support

--- a/config/locales/ar.json
+++ b/config/locales/ar.json
@@ -1,4 +1,8 @@
 {
   "Welcome": "أهلا بك",
-  "A brand new app.": "تطبيق جديد تمامًا."
+  "Account": "الحساب",
+  "Signout": "تسجيل الخروج",
+  "EN": "English",
+  "AR": "العربية",
+  "Settings": "الاعدادات"
 }
