Replace full name with first name and last name, validate user on meeting update

--- a/config/locales/ar.json
+++ b/config/locales/ar.json
@@ -4,5 +4,7 @@
   "Signout": "تسجيل الخروج",
   "EN": "English",
   "AR": "العربية",
-  "Settings": "الاعدادات"
+  "Settings": "الاعدادات",
+  "FirstName": "الاسم الاول",
+  "LastName": "الاسم الاخير"
 }
